fix height for about page on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ a {
 #about {
   background-color: #161616;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: flex-end;
 }
